# agency-standards

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
openspec/: project.md
openspec/changes/add-standard-discovery/: proposal.md  tasks.md
openspec/changes/add-standard-discovery/specs/post-init-selection/: spec.md
openspec/changes/adopt-project-standards/: proposal.md  tasks.md
openspec/changes/fix-add-status-commands/: proposal.md  tasks.md
openspec/changes/redesign-openspec-companion/: design.md  proposal.md  tasks.md
src/agency_standards/: cli.py  config.py  generator.py  inspector.py  models.py
src/agency_standards/builtin_standards/: aaa-comments.yaml  adr.yaml  assertion-messages.yaml  client-class-naming.yaml  e2e-bdd-pattern.yaml  e2e-no-direct-http.yaml  e2e-no-skipped-scenarios.yaml  e2e-resource-naming.yaml  file-length.yaml  file-naming.yaml  init-imports-all-steps.yaml  no-bare-except.yaml  no-magic-strings.yaml  no-session-helpers-in-constants.yaml  no-skipped-tests.yaml  no-steps-in-conftest.yaml  one-class-per-file.yaml  one-step-per-file.yaml  one-test-class-per-file.yaml  step-decorator-matches-directory.yaml  step-file-name-matches-function.yaml
src/agency_standards/commands/: _task_injection.py  init_cmd.py  install_cmd.py  list_cmd.py  post_apply_cmd.py  post_archive_cmd.py  post_init_cmd.py  post_propose_cmd.py  pre_apply_cmd.py  pre_archive_cmd.py  pre_init_cmd.py  pre_propose_cmd.py  standards_cmd.py  status_cmd.py  update_cmd.py
src/agency_standards/skills/: generate.md  update.md
src/agency_standards/standards/: loader.py
(+9 files in other folders)
